--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "phosphor-react": "^1.4.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
