--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "phosphor-react": "^1.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-hook-form": "^7.62.0"
+    "react-hook-form": "^7.62.0",
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
