--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -24,12 +25,12 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.1.1",
+    "@chromatic-com/storybook": "^4.1.2",
     "@eslint/js": "^9.34.0",
-    "@storybook/addon-a11y": "^9.1.3",
-    "@storybook/addon-docs": "^9.1.3",
-    "@storybook/addon-onboarding": "^9.1.3",
-    "@storybook/react-vite": "^9.1.3",
+    "@storybook/addon-a11y": "^10.0.5",
+    "@storybook/addon-docs": "^10.0.5",
+    "@storybook/addon-onboarding": "^10.0.5",
+    "@storybook/react-vite": "^10.0.5",
     "@tailwindcss/vite": "^4.1.12",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -47,13 +48,13 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "eslint-plugin-storybook": "^9.1.3",
+    "eslint-plugin-storybook": "^10.0.5",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
     "playwright": "^1.55.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "storybook": "^9.1.3",
+    "storybook": "^10.0.5",
     "tailwindcss": "^4.1.12",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.41.0",
