--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
     "clsx": "^2.1.1",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.1",
